--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,58 @@ body::before {
     color: #CC9140;
 }
 
-.entrar{
+.cadastrar{
     width: 550px;
     height: 480px;
     background-color: #3A506B;
     opacity: 0.7;
     border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cadastrar input{
+    width: 400px;
+    height: 30px;
+    border-radius: 20px;
+    padding-left: 20px;
+    border: none;
+}
+
+.cadastrar input:focus{
+    outline: none;
+}
+
+.input-container,
+.input-container2 {
+  position: relative; /* <---- ESSENCIAL */
+  width: 400px;
+}
+
+.input-container img,
+.input-container2 img {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
+
+p{
+    color: white;
+}
+
+button{
+    width: 150px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+}
+a{
+    color: #CC9140;
 }
