--- a/css/paginaInicial.css
+++ b/css/paginaInicial.css
@@ -12,42 +12,123 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Arial, sans-serif;
+    color: white;
 }
 
 body::before {
     content: "";
     position: fixed;
     inset: 0;
-    background: url("../img/image1.png") center/1100px no-repeat;
-    opacity: 0.8;
+    background: url("../img/image1.png") left/900px no-repeat;
+    opacity: 0.5;
     z-index: -1;
 }
 
-header{
+header {
     width: 100%;
     display: flex;
-    gap: 85%;
-    padding-left: 20px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
 }
 
-header img{
-    width: 85px;
-    height: 85px;
+header img {
+    width: 65px;
+    height: 65px;
     cursor: pointer;
 }
 
-.grafico{
-     width: 220px;
-  height: 130px;
-  margin: 10px auto;
+main {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
 }
-.graficoAtual{
-    width: 550px;
+
+.graphic {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.grafico {
+    width: 220px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-top: -40px;
+    gap: 20px;
+}
+
+.graficoAtual {
+    width: 350px;
     height: 280px;
-    background-color: red;
+    background-color: rgba(255, 255, 255, 0.1);
     border-radius: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    gap: 15px;
+    font-size: 18px;
+    overflow: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    -webkit-overflow-scrolling: touch;
+
+}
+
+#gaugeChart {
+  width: 250px !important;
+  height: 230px !important;
+}
+
+#addTransacao {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 65px;
+    height: 65px;
+    background-color: #d9d9d9;
+    color: black;
+    border: none;
+    border-radius: 50%;
+    font-size: 52px;
+    font-weight: 10px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    transition: transform 0.2s, background-color 0.2s;
+}
+
+#addTransacao:focus{
+    outline: none;
+}
+
+#addTransacao:hover {
+    transform: scale(1.1);
+    background-color: #d9d9d9;
+}
+
+#historico {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+#historico input {
+    width: 100%;
+    height: 25px;
+    border: none;
+    border-radius: 20px;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: default;
+}
+
+#historico input:focus{
+    outline: none;
 }
