--- a/css/historico.css
+++ b/css/historico.css
@@ -51,3 +51,22 @@ header img {
     width: max-content;
     height: max-content;
 }
+
+footer{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer button{
+    height: 40px;
+    border: none;
+    padding: 8px;
+    background-color: #8d8bf3;
+    font-family:Arial, sans-serif ;
+    border-radius: 20px;
+    color: rgba(28, 37, 65, 1);
+    cursor: pointer;
+}
