--- a/css/paginaInicial.css
+++ b/css/paginaInicial.css
@@ -120,7 +120,7 @@ main {
 }
 
 #historico input {
-    width: 100%;
+    width: 300px;
     height: 25px;
     border: none;
     border-radius: 20px;
